--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <script src="app-services/flash.service.js"></script>
 
     <!-- Real user service that uses an api -->
-    <!-- <script src="app-services/user.service.js"></script> -->
+     <script src="app-services/user.service.js"></script>
 
     <!-- Fake user service for demo that uses local storage -->
-    <script src="app-services/user.service.local-storage.js"></script>
+   <!-- <script src="app-services/user.service.local-storage.js"></script>-->
 
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
